deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: respondnow
  labels:
    app.kubernetes.io/name: respondnow
